--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,36 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField ("String", "USERNAME", localProperties['MOCK_USERNAME'])
-        buildConfigField ("String", "PASSWORD", localProperties['MOCK_PASSWORD'])
+        /*buildConfigField ("String", "USERNAME", localProperties['MOCK_USERNAME'])
+        buildConfigField ("String", "PASSWORD", localProperties['MOCK_PASSWORD'])*/
     }
 
     buildTypes {
+
+        def propFile=rootProject.file("./local.properties")
+        def properties = new Properties()
+        properties.load(new FileInputStream(propFile))
+
+        def username = properties['MOCK_USERNAME']
+        def password = properties['MOCK_PASSWORD']
+
         release {
-            resValue("string", "mock_username", localProperties['MOCK_USERNAME'])
-            resValue("string", "mock_password", localProperties['MOCK_PASSWORD'])
+            buildConfigField 'String', "USERNAME", username
+            buildConfigField 'String', "PASSWORD", password
+
+            resValue('string', "mock_username", username)
+            resValue('string', "mock_password", password)
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             jniDebuggable true
         }
         debug {
-            resValue("string", "mock_username", localProperties['MOCK_USERNAME'])
-            resValue("string", "mock_password", localProperties['MOCK_PASSWORD'])
+            buildConfigField 'String', "USERNAME", username
+            buildConfigField 'String', "PASSWORD", password
+
+            resValue('string', "mock_username", username)
+            resValue('string', "mock_password", password)
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
