--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -17,9 +17,15 @@ jobs:
       - name: Grant execute permission for script
         run: chmod +x ./scripts/update_properties.sh
 
-      - name: Print Login Params Values
-        run: |
-          bash ./scripts/update_properties.sh ${{ secrets.TELNYX_SIP_USER }} ${{ secrets.TELNYX_SIP_PASSWORD }}
+      - name: Update Username from Secrets
+        env:
+          MOCK_USERNAME: {{ secrets.TELNYX_SIP_USER }}
+          run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+
+      - name: Update Password from Secrets
+        env:
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_PASSWORD }}
+          run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
