--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -14,17 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-
-      - name: Grant execute permission for script
-        run: chmod +x ./scripts/update_properties.sh
-
-        # - name: Touch Local Properties
-          # run: |
-      #   bash ./scripts/update_properties.sh
-
+        uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: {{ secrets.TELNYX_SIP_USER }}
@@ -50,12 +46,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: {{ secrets.TELNYX_SIP_USER }}
           run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
-
       - name: Update Password from Secrets
         env:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
