--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -11,19 +11,19 @@ jobs:
     steps:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-
-      - name: Grant execute permission for script
-        run: chmod +x ./scripts/update_properties.sh
-
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: {{ secrets.TELNYX_SIP_USER }}
-          run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
-
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
       - name: Update Password from Secrets
         env:
-          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_PASSWORD }}
-          run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
