--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -11,19 +11,22 @@ jobs:
   # 3 Unit Test Script
   unit_tests:
     runs-on: ubuntu-latest
-    steps:
+      steps:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: {{ secrets.TELNYX_SIP_USER }}
-          run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
-
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
       - name: Update Password from Secrets
         env:
-          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_PASSWORD }}
-          run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
