--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -15,7 +15,6 @@ jobs:
     steps:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - uses: actions/checkout@v2
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -41,7 +40,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Checkout code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
