--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -13,10 +13,13 @@ jobs:
   unit_tests:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
@@ -35,12 +38,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # 1
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
