--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -9,10 +9,13 @@ jobs:
   unit_tests:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
