--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -27,6 +27,14 @@ jobs:
         env:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
+        
+      - name: Read local.properties
+        id: properties
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./local.properties
+      - name: Echo local.properties
+        run: echo "${{ steps.package.outputs.content }}"
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
