Revert "[WEBRTC-644] Make use of properties github.properties instead of local.properties"
This reverts commit c83017b02f68f081d9f0607cc74e0950a475177a.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     buildTypes {
 
-        def propFile=rootProject.file("./github.properties")
+        def propFile=rootProject.file("./local.properties")
         def properties = new Properties()
         properties.load(new FileInputStream(propFile))
 
