--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -18,17 +18,13 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
+      - name: Setup Environment
       - shell: bash
         env:
-                GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-                GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
+            GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
+            GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: |
-                sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
+            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
       - name: Unit tests
         run: ./gradlew test
 
@@ -44,15 +40,15 @@ jobs:
         with:
           java-version: 1.8
 
-      - shell: bash
-        env:
-                GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-                GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: |
-                sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
-
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+      - name: Setup Environment
+      - shell: bash
+        env:
+              GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
+              GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: |
+            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
