--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -17,13 +17,15 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Setup Environment
       - shell: bash
         env:
-              GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-              GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
+            GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
+            GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: |
-               sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
+            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
 
       - name: Read local.properties
         id: properties
@@ -32,9 +34,6 @@ jobs:
           path: ./local.properties
       - name: Echo local.properties
         run: echo "${{ steps.package.outputs.content }}"
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
