--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -18,13 +18,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Setup Environment
-      - shell: bash
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Update Username from Secrets
         env:
-            GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-            GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: |
-            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+      - name: Update Password from Secrets
+        env:
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
+
       - name: Unit tests
         run: ./gradlew test
 
@@ -42,13 +46,14 @@ jobs:
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Setup Environment
-      - shell: bash
+      - name: Update Username from Secrets
         env:
-              GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-              GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: |
-            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+      - name: Update Password from Secrets
+        env:
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
