--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -16,13 +16,14 @@ jobs:
           java-version: 1.8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Setup Environment
-      - shell: bash
+      - name: Update Username from Secrets
         env:
-            GPR_USR: ${{ secrets.TELNYX_SIP_USER }}
-            GPR_PASS: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: |
-            sh ./scripts/apply_properties.sh -u "$GPR_USR" -p "$GPR_PASS"
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+      - name: Update Password from Secrets
+        env:
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
