--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,22 +45,22 @@ android {
         }
 
         release {
-            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"xxx"')
-            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"xxx"')
+            buildConfigField 'String', "MOCK_USERNAME", "'"+properties.getProperty('MOCK_USERNAME', '"xxxxx"')+"'"
+            buildConfigField 'String', "MOCK_PASSWORD", "'"+properties.getProperty('MOCK_PASSWORD', '"xxxxx"')+"'"
 
-            resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxx"'))
-            resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxx"'))
+            resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
+            resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             jniDebuggable true
         }
         debug {
-            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"xxx"')
-            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"xxx"')
+            buildConfigField 'String', "MOCK_USERNAME", "'"+properties.getProperty('MOCK_USERNAME', '"xxxxx"')+"'"
+            buildConfigField 'String', "MOCK_PASSWORD", "'"+properties.getProperty('MOCK_PASSWORD', '"xxxxx"')+"'"
 
-            resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxx"'))
-            resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxx"'))
+            resValue('string', "mock_username", "'"+properties.getProperty('MOCK_USERNAME', '"xxxxx"'))+"'"
+            resValue('string', "mock_password", "'"+properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))+"'"
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
