--- a/.github/workflows/firebase_test_lab.yml
+++ b/.github/workflows/firebase_test_lab.yml
@@ -20,6 +20,11 @@ jobs:
           java-version: 1.8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+
+      - shell: bash
+        run: |
+          sh ./scripts/update_properties.sh
+
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
@@ -46,6 +51,11 @@ jobs:
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+
+      - shell: bash
+        run: |
+          sh ./scripts/update_properties.sh
+
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
@@ -54,7 +64,6 @@ jobs:
         env:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
-
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
 
