--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -16,6 +16,11 @@ jobs:
           java-version: 1.8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+
+      - shell: bash
+        run: |
+          sh ./scripts/update_properties.sh
+
       - name: Update Username from Secrets
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
