--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -30,6 +30,12 @@ jobs:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
+      - name: Clean
+        run: ./gradlew clean
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug --stacktrace
 
