--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -33,6 +33,12 @@ jobs:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
         run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
 
+      - name: Clean
+        run: ./gradlew clean
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Read local.properties
         id: properties
         uses: juliangruber/read-file-action@v1
