--- a/.github/workflows/scheduled_unit_test.yml
+++ b/.github/workflows/scheduled_unit_test.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Update Password from Secrets
         env:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
-        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" > ./local.properties
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" >> ./local.properties
 
       - name: Clean
         run: ./gradlew clean
