--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -28,6 +28,10 @@ jobs:
         env:
           MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
         run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+
+      - name: Add new line
+        run: echo -e "\n" >> ./local.properties
+
       - name: Update Password from Secrets
         env:
           MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
