[WEBRTC-644] Github actions test adjustments (#46)
* [WEBRTC-644] Github actions test adjustments

* [WEBRTC-644] Generate documentation after firebase tests succeed

* [WEBRTC-644] fix doc generation requirement

* [WEBRTC-644] Test adjustments - script changes to not include token

* [WEBRTC-644] Fix shell script file path reference

* [WEBRTC-644] more file path changes

* [WEBRTC-644] move shell script run

* [WEBRTC-644] Yaml formatting

* [WEBRTC-644] add gradle methods for secret retrieval

* [WEBRTC-644] Adjust tests to use BuildConfig values

* [WEBRTC-644] chmod before test

* [WEBRTC-644] touch local properties implementation

* [WEBRTC-644] remove touch

* [WEBRTC-664] Adjust property reference

* [WEBRTC-644] Test adjustments

* [WEBRTC-644] Nullable string values for build config fields

* [WEBRTC-644] nullable string values via elvis operator

* [WEBRTC-644] More yaml formatting

* [WEBRTC-644] Fix uses line

* [WEBRTC-644] Remove nullable option

* [WEBRTC-644] Pipeline variable replacement changes

* [WEBRTC-644] YAML formatting

* [WEBRTC-644] Fix script reference

* [WEBRTC-644] Fix script reference

* [WEBRTC-644] change variable access

* [WEBRTC-644] Use string values from strings.xml during tests

* [WEBRTC-644] Run on ubuntu-latest

* [WEBRTC-644] Catch token exception correctly

* [WEBRTC-644] Mock username and password adjustments

* [WEBRTC-644] Fix uses error

* [WEBRTC-644] remove unnecessary checkout line

* [WEBRTC-644] Correct run lineup

* [WEBRTC-644] Remove unnecessary uses line

* [WEBRTC-644] Fix mapping issues

* [WEBRTC-644] Remove chmod command

* [WEBRTC-644] include checkout

* [WEBRTC=644] Adjust null with elvis operator

* [WEBRTC-644] Add output step to monitor changes

* [WEBRTC-644] Additional elvis operator check

* [WEBRTC-644] Double quotations around elvis operator variable

* [WEBRTC-644] Escape characters correctly

* [WEBRTC-644] Us

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -24,12 +28,31 @@ android {
     }
 
     buildTypes {
+        Properties properties = new Properties()
+        if (project.rootProject.file('local.properties').canRead()) {
+            properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        } else {
+            throw new GradleException("Could not read local.properties!")
+        }
+
         release {
+            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"xxxxx"')
+            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"xxxxx"')
+
+            resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
+            resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             jniDebuggable true
         }
         debug {
+            buildConfigField 'String', "MOCK_USERNAME", properties.getProperty('MOCK_USERNAME', '"xxxxx"')
+            buildConfigField 'String', "MOCK_PASSWORD", properties.getProperty('MOCK_PASSWORD', '"xxxxx"')
+
+            resValue('string', "mock_username", properties.getProperty('MOCK_USERNAME', '"xxxxx"'))
+            resValue('string', "mock_password", properties.getProperty('MOCK_PASSWORD', '"xxxxx"'))
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable true
