--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.dokka'
     id 'maven-publish'
     id 'kotlin-android-extensions'
+    id 'jacoco'
 }
 
 apply plugin: 'maven-publish'
