--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -119,14 +119,14 @@ android {
         jvmTarget = '1.8'
     }
     testOptions {
-        unitTests.all {
+     /*   unitTests.all {
             jacoco {
                 includeNoLocationClasses = true
                 jacoco.excludes = ['jdk.internal.*']
             }
         }
         unitTests.includeAndroidResources = true
-        unitTests.returnDefaultValues = true
+        unitTests.returnDefaultValues = true */ 
     }
     sourceSets {
         test.manifest.srcFile "src/main/AndroidManifest.xml"
