--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,13 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release Version'
+        required: true
+        default: '0.0.0'
 
 jobs:
   build:
@@ -12,6 +16,19 @@ jobs:
     steps:
       - name: "📥 Check-out"
         uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Clean
+        run: ./gradlew clean
+
+      - name: Assemble app debug APK
+        run: bash ./gradlew assemble
+
       - name: "✏️ Generate release changelog"
         id: generate-release-changelog
         uses: heinrichreimer/github-changelog-generator-action@v2.1.1
@@ -21,10 +38,22 @@ jobs:
           stripHeaders: "true"
           stripGeneratorNotice: "true"
       - name: "🚀 Create GitHub release"
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: Release ${{ github.event.inputs.version }}
           body: ${{ steps.generate-release-changelog.outputs.changelog }}
+          prerelease: true
+
+        #  - name: Upload Release Asset
+        # id: upload-release-asset
+        # uses: actions/upload-release-asset@v1
+          #env:
+          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # with:
+          # upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          # asset_path: telnyx_rtc/build/outputs/aar/telnyx_rtc-release.aar
+          # asset_name: telnyx_rtc-release
