--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,23 @@ jobs:
           java-version: 1.8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-        
+
+      - name: Update Username from Secrets
+        env:
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+
+      - name: Add new line
+        run: echo -e "\n" >> ./local.properties
+
+      - name: Update Password from Secrets
+        env:
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" >> ./local.properties
+
+      - name: Clean
+        run: ./gradlew clean
+
       - name: Read local.properties
         id: properties
         uses: juliangruber/read-file-action@v1
@@ -30,9 +46,6 @@ jobs:
           path: ./local.properties
       - name: Echo local.properties
         run: echo "${{ steps.package.outputs.content }}"
-
-      - name: Assemble SDK aar
-        run: bash ./gradlew assemble
 
       - name: "✏️ Generate release changelog"
         id: generate-release-changelog
