--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,32 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Update Username from Secrets
+        env:
+          MOCK_USERNAME: ${{ secrets.TELNYX_SIP_USER }}
+        run: echo MOCK_USERNAME="$MOCK_USERNAME" > ./local.properties
+
+      - name: Add new line
+        run: echo -e "\n" >> ./local.properties
+
+      - name: Update Password from Secrets
+        env:
+          MOCK_PASSWORD: ${{ secrets.TELNYX_SIP_PASSWORD }}
+        run: echo MOCK_PASSWORD="$MOCK_PASSWORD" >> ./local.properties
+
       - name: Clean
         run: ./gradlew clean
 
-      - name: Assemble app debug APK
-        run: bash ./gradlew assemble
+      - name: Read local.properties
+        id: properties
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./local.properties
+      - name: Echo local.properties
+        run: echo "${{ steps.package.outputs.content }}"
+
+      - name: Assemble SDK aar files for upload
+        run: bash ./gradlew assemble --stacktrace
 
       - name: "✏️ Generate release changelog"
         id: generate-release-changelog
@@ -48,12 +69,13 @@ jobs:
           body: ${{ steps.generate-release-changelog.outputs.changelog }}
           prerelease: true
 
-        #  - name: Upload Release Asset
-        # id: upload-release-asset
-        # uses: actions/upload-release-asset@v1
-          #env:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # with:
-          # upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          # asset_path: telnyx_rtc/build/outputs/aar/telnyx_rtc-release.aar
-          # asset_name: telnyx_rtc-release
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: telnyx_rtc/build/outputs/aar/telnyx_rtc-release.aar
+          asset_name: telnyx_rtc-release
+          asset_content_type: application/java-archive
