[WEBRTC-716] Remove test that is no longer relevant (Gateway changes)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,9 @@ android {
                 includeNoLocationClasses = true
                 jacoco.excludes = ['jdk.internal.*']
             }
-        }
+        }*/
         unitTests.includeAndroidResources = true
-        unitTests.returnDefaultValues = true*/
+        unitTests.returnDefaultValues = true
     }
 
     packagingOptions {
