[WEBRTC-716] Github actions slackbot release (#64)
* [WEBRTC-716] Release now manual, release bot script created

* [WEBRTC-716] Increase thread sleep time

* [WEBRTC-716] Comment out asset upload yaml script -- unnecessary for now

* [WEBRTC-716] Strip JaCoCo from project level gradle

* [WEBRTC-716] Temporarily comment out test options

* [WEBRTC-716] comment out app level test options

* [WEBRTC-716] Finalized release workflow

* [WEBRTC-716] add newline at end of yaml file

* [WEBRTC-716] Remove test that is no longer relevant (Gateway changes)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,12 +67,12 @@ android {
         jvmTarget = '1.8'
     }
     testOptions {
-        unitTests.all {
+        /*unitTests.all {
             jacoco {
                 includeNoLocationClasses = true
                 jacoco.excludes = ['jdk.internal.*']
             }
-        }
+        }*/
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
