[WEBRTC-716] include more release types

--- a/.github/workflows/release_bot_notify.yml
+++ b/.github/workflows/release_bot_notify.yml
@@ -2,7 +2,7 @@ name: Announce the release on Slack
 
 on:
   release:
-    types: [created]
+    types: [created, published, prereleased, released, edited]
 
 jobs:
   slack:
