[WEBRTC-716] Add release script to release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,3 +79,15 @@ jobs:
           asset_path: telnyx_rtc/build/outputs/aar/telnyx_rtc-release.aar
           asset_name: telnyx_rtc-release
           asset_content_type: application/java-archive
+
+      - name: Slackify the release body
+        id: release_body
+        uses: LoveToKnow/slackify-markdown-action@v1.0.0
+        with:
+          text: ${{ github.event.release.body }}
+      - uses: homeday-de/slack-release-bot-action@main
+        with:
+          webhook_url: ${{ secrets.SLACK_RELEASE_BOT_WEBHOOK_URL }}
+          title: ${{ github.event.release.name }}
+          body: ${{ steps.release_body.outputs.text }}
+          context: Android WebRTC SDK
