--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,11 +79,17 @@ jobs:
           asset_path: telnyx_rtc/build/outputs/aar/telnyx_rtc-release.aar
           asset_name: telnyx_rtc-release
           asset_content_type: application/java-archive
+          
+      - name: Slackify the release body
+        id: release_body
+        uses: LoveToKnow/slackify-markdown-action@v1.0.0
+        with:
+          text: ${{ steps.generate-release-changelog.outputs.changelog }}
 
       - name: Slackify the release body
         uses: homeday-de/slack-release-bot-action@main
         with:
           webhook_url: ${{ secrets.SLACK_RELEASE_BOT_WEBHOOK_URL }}
           title: ${{ github.event.release.name }}
-          body: ${{ steps.generate-release-changelog.outputs.changelog }}
+          body: ${{ steps.release_body.outputs.text }}
           context: Android WebRTC SDK
