[WEBRTC-716] Adding Gradle detekt for local usage

--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.dokka'
     id 'maven-publish'
     id 'kotlin-android-extensions'
+    id 'io.gitlab.arturbosch.detekt'
 }
 
 apply plugin: 'maven-publish'
@@ -133,7 +134,23 @@ android {
     }
 }
 
+detekt {
+    buildUponDefaultConfig = true // preconfigure defaults
+    allRules = false // activate all available (even unstable) rules.
+    config = files("$projectDir/config/detekt.yml") // point to your custom config defining rules to run, overwriting default behavior
+    baseline = file("$projectDir/config/baseline.xml") // a way of suppressing issues before introducing detekt
+
+    reports {
+        html.enabled = true // observe findings in your browser with structure and code snippets
+        xml.enabled = true // checkstyle like format mainly for integrations like Jenkins
+        txt.enabled = true // similar to the console output, contains issue signature to manually edit baseline files
+        sarif.enabled = true // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with Github Code Scanning
+    }
+}
+
 dependencies {
+
+    apply plugin: 'io.gitlab.arturbosch.detekt'
 
     implementation deps.kotlin.stdlib
     implementation deps.androidx_core
