--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.0"
         classpath "com.bugsnag:bugsnag-android-gradle-plugin:$versions.bugsnag"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
         classpath deps.google_play_services
@@ -27,6 +28,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://jitpack.io" }
     }
 
