--- a/.github/workflows/unit_test_on_push.yml
+++ b/.github/workflows/unit_test_on_push.yml
@@ -44,5 +44,8 @@ jobs:
       - name: Echo local.properties
         run: echo "${{ steps.package.outputs.content }}"
 
+      - name: Assemble app debug APK
+        run: bash ./gradlew assembleDebug --stacktrace
+
       - name: Unit tests
         run: ./gradlew test
