--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("org.jetbrains.kotlinx:kover:0.4.2")
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.18.0"
         classpath "com.bugsnag:bugsnag-android-gradle-plugin:$versions.bugsnag"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
@@ -19,6 +20,8 @@ buildscript {
         classpath deps.hilt.plugin
     }
 }
+
+apply plugin: 'kover'
 
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
